# llm

./: .gitignore  Cargo.toml  README.md  flake.nix  gemma3.ipynb  tests.ipynb
.github/: release-drafter.yml
.github/workflows/: ci.yml  release.yml
benches/: bench_modules.rs
benches/benchmarks/: gemma.rs  mod.rs  modules.rs  tensor.rs
src/: embedding.rs  erf.rs  feed_forward.rs  gemma3.rs  grouped_query_attention.rs  lib.rs  linear.rs  main.rs  modules.rs  rms_norm.rs  rope.rs  tensor.rs  transformer_block.rs
src/gemma3/: feed_forward.rs  grouped_query_attention.rs  mod.rs  rms_norm.rs  rope.rs  transformer_block.rs
