[package]
name = "llm"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "plotters"] }
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench_modules"
harness = false
